# MDLParser

./: .gitignore  CMakeLists.txt  CMakePresets.json  Doxyfile  DoxygenLayout.xml  MDLParser.h  MDLParser.hpp  README.md
.github/workflows/: doxygen.yml
source/: Enums.h  FileLimits.h  Ints.h  Limits.h  MDLParser.cpp  Structs.h  VTXParser.cpp  VVDParser.cpp  accessors.cpp  accessors.hpp  enums.hpp  errors.hpp  limits.hpp  mdl.cpp  mdl.hpp  vtx.cpp  vtx.hpp  vvd.cpp  vvd.hpp
source/helpers/: check-bounds.hpp  normalise-directory.cpp  normalise-directory.hpp  offset-data-view.cpp  offset-data-view.hpp  parse-string.cpp  parse-string.hpp  parse-struct.hpp
source/structs/: common.hpp  mdl.hpp  vtx.hpp  vvd.hpp
